# utmb-enrich

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: 1_Vertical_Uphill_F.csv  1_Vertical_Uphill_M.csv  2022_Gletscher_Trail_-_42K_F.csv  2022_Gletscher_Trail_-_42K_M.csv  2023_Gletscher_Trail_-_42K_F.csv  2023_Gletscher_Trail_-_42K_M.csv  2_Trail_Long_F.csv  2_Trail_Long_M.csv  3_Trail_Short_F.csv  3_Trail_Short_M.csv  4_Mountain_Classic_Junior_F.csv  4_Mountain_Classic_Junior_M.csv  5_Mountain_Classic_Senior_F.csv  5_Mountain_Classic_Senior_M.csv  all_participants_F.csv  all_participants_M.csv  runners.json  unstandard_countries.json  unstandard_fifa_country_codes.json
data/json/: 1_Vertical_Uphill_F.json  1_Vertical_Uphill_M.json  2_Trail_Long_F.json  2_Trail_Long_M.json  3_Trail_Short_F.json  3_Trail_Short_M.json  4_Mountain_Classic_Junior_F.json  4_Mountain_Classic_Junior_M.json  5_Mountain_Classic_Senior_F.json  5_Mountain_Classic_Senior_M.json  all_participants_F.json  all_participants_M.json
utmb_enrich/: enrich_utmb.py
